--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a base image
-FROM python:3.6-slim
+FROM python:3.9-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -18,4 +18,4 @@ EXPOSE 5000
 ENV FLASK_APP=app.py
 
 # Run the Flask app
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["python","app.py"]
